# mermaid-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py  llm_handler.py  renderer.py  server.py
src/templates/: dark.css  default.css
src/utils/: __init__.py  index.py
